--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   ],
   "dependencies": {
     "body-parser": "^1.0.2",
+    "bson": "^0.2.12",
     "compression": "^1.0.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^0.4.0",
+    "connect-multiparty": "*",
     "cookie-parser": "^1.0.1",
     "csurf": "^1.1.0",
     "data2xml": "0.8.0",
+    "ejs": "*",
     "ejs-mate": "2.0.0",
-    "ejs":"*",
     "errorhandler": "^1.0.0",
     "eventproxy": "0.2.6",
     "express": "~4.1.1",
@@ -26,6 +29,7 @@
     "marked": "~0.3.2",
     "method-override": "^1.0.0",
     "mongoose": "~2.8.0",
+    "multer": "^0.1.4",
     "ndir": "0.1.3",
     "newrelic": "^1.7.5",
     "node-markdown": "0.1.0",
@@ -36,8 +40,7 @@
     "response-time": "^1.0.0",
     "utility": "0.0.x",
     "validator": "0.3.7",
-    "xss": "~0.0.9",
-    "connect-flash": "^0.1.1"
+    "xss": "~0.0.9"
   },
   "devDependencies": {
     "jscover": "*",
