--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "forever": "~0.10.11",
     "loader": "0.1.2",
     "lodash": "^2.4.1",
+    "markdown": "^0.5.0",
     "marked": "~0.3.2",
     "method-override": "^1.0.0",
     "mongoose": "~2.8.0",
