--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "marked": "~0.3.2",
     "method-override": "^1.0.0",
     "mongoose": "~2.8.0",
+    "morgan": "^1.2.3",
     "multer": "^0.1.4",
     "ndir": "0.1.3",
     "newrelic": "^1.7.5",
