--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ndir": "0.1.3",
     "newrelic": "^1.7.5",
     "node-markdown": "0.1.0",
+    "node-xlsx": "^0.4.0",
     "nodemailer": "0.3.43",
     "passport": "~0.1.17",
     "passport-github": "~0.1.5",
